# bevy-linux-wallpaper

./: Cargo.toml  README.md  bg-test.sh  bg.sh
crates/bevy_winit/: Cargo.toml  README.md
crates/bevy_winit/examples/spinning-cube/: Cargo.toml  \
crates/bevy_winit/src/: converters.rs  lib.rs  state.rs  system.rs  winit_monitors.rs  winit_windows.rs
crates/bevy_winit/src/wallpaper_plugin/: mod.rs  state.rs.bak  system.rs  winit_windows.rs
crates/mpv/: Cargo.toml  README.md  bg-test.sh  bg.sh
crates/mpv/src/: lib.rs
crates/winit/: .gitignore  README.md
crates/winit/src/: event_loop.rs
crates/winit/src/platform_impl/linux/x11/: mod.rs  window.rs
src/: lib.rs
src/wallpaper_plugin/: state.rs  system.rs  winit_config.rs  winit_windows.rs
