[package]
name = "game-background"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# anyhow = "1.0.97"
bevy = { version = "0.15.3" }  #, features = ["dynamic_linking"] }
# bevy-progressbar = { git = "https://github.com/keng9/bevy-progressbar", version = "0.8.0" }
bevy_capture = { version = "0.2.1", features = ["gif", "mp4_openh264"] }
# bytes = "1.10.1"
# clap = { version = "4.5.32", features = ["derive"] }
# crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
# futures = "0.3.31"
# rml_rtmp = "0.8.0"
# rtmp = "0.6.5"
# streamhub = "0.2.4"
# tokio = { version = "1.44.1", features = ["full"] }
