[package]
name = "bevy_linux_wallpaper"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["x11"]
x11 = []
trace = []

[dependencies]
approx = "0.5.1"
bevy = { version = "0.15.3", default-features = false }
bevy_app = "0.15.3"
bevy_ecs = { version = "0.15.3", features = ["multi_threaded"] }
bevy_log = "0.15.3"
bevy_math = "0.15.3"
bevy_platform_support = "0.0.1"
bevy_tasks = "0.15.3"
bevy_window = "0.15.3"
cfg-if = "1.0.0"
tracing = "0.1.41"
winit = "0.30.9"
# winit = { path = "../winit", features = ["rwh_06", "x11"] }
x11rb = "0.13.1"
